# pico_bootloader

./: .gitignore  CMakeLists.txt  README.md  application1.c  application1_memmap.ld  application2.c  application2_memmap.ld  bootloader.c  bootloader_memmap.ld  build.sh  flash.h  flash.sh  reset.sh
.github/workflows/: hello-world.yml
